Verified GET Endpoints for handymen
